--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -1,13 +1,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:p="http://primefaces.org/ui">
 
 	<h:head>
 		<h:outputStylesheet library="css" name="styles.css"></h:outputStylesheet>
 	</h:head>
 	<h:body>
 		<h:form id="formLogin">
-			<h:panelGrid columns="2">
+			<p:panelGrid columns="2">
 			
 				<h:outputLabel value="Usuario: *" styleClass="colorText"></h:outputLabel>
 				<h:inputText id="txtUsuario" value="#{loginController.usuario}" required="true" requiredMessage="El usuario es requerido"></h:inputText>
@@ -17,7 +18,7 @@
 				
 				<h:commandButton value="Entrar" action="#{loginController.ingresar}"> </h:commandButton>
 			
-			</h:panelGrid>
+			</p:panelGrid>
 		</h:form>
 
 	</h:body>
