--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -1,25 +1,45 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:p="http://primefaces.org/ui">
 
-	<h:head>
-		<h:outputStylesheet library="css" name="styles.css"></h:outputStylesheet>
-	</h:head>
-	<h:body>
+<h:head>
+	<!-- <h:outputStylesheet library="css" name="styles.css"></h:outputStylesheet> -->
+	<meta name="viewport" content="width=device-width, user-scalable=no"></meta>
+</h:head>
+<h:body>
+	<div class="ui-fluid">
 		<h:form id="formLogin">
-			<h:panelGrid columns="2">
-			
-				<h:outputLabel value="Usuario: *" styleClass="colorText"></h:outputLabel>
-				<h:inputText id="txtUsuario" value="#{loginController.usuario}" required="true" requiredMessage="El usuario es requerido"></h:inputText>
-
-				<h:outputLabel value="Contraseña: *" styleClass="colorText"></h:outputLabel>
-				<h:inputSecret id="txtPassword" value="#{loginController.password}" required="true" requiredMessage="La contraseña es requerida"></h:inputSecret>
+			<p:growl id="growl" />
+			<p:panel id="pnlLogin" header="inicio de Sesión" style="text-align: center">
+				<p:graphicImage name="imgs/user1.PNG" width="20%"/>
 				
-				<h:commandButton value="Entrar" action="#{loginController.ingresar}"> </h:commandButton>
-			
-			</h:panelGrid>
-		</h:form>
+				<p:panelGrid id="pnlGridLogin" columns="1"
+					columnClasses="ui-grid-col-12,ui-grid-col-12" layout="grid"
+					styleClass="ui-panelgrid-blank ui-fluid">
 
-	</h:body>
+					<p:outputLabel value="Usuario: " styleClass="colorText"
+						for="txtUsuario" style="float: left"></p:outputLabel>
+					<p:inputText id="txtUsuario" value="#{loginController.usuario}"
+						required="true" requiredMessage="El usuario es requerido"></p:inputText>
+
+					<p:outputLabel value="Contraseña: " styleClass="colorText"
+						for="txtPassword" style="float: left"></p:outputLabel>
+					<p:password id="txtPassword" value="#{loginController.password}"
+						required="true" requiredMessage="La contraseña es requerida"></p:password>
+
+
+					<p:outputLabel></p:outputLabel>
+					<p:commandButton value="Entrar"
+						action="#{loginController.ingresar}" update="pnlGridLogin,growl"></p:commandButton>
+
+				</p:panelGrid>
+
+
+			</p:panel>
+
+		</h:form>
+	</div>
+</h:body>
 
 </html>
